--- a/src/A2e_fxh157.ipynb
+++ b/src/A2e_fxh157.ipynb
@@ -158,7 +158,7 @@
     "    ticks = [sr*i for i in labels]\n",
     "    plt.xticks(ticks=ticks, labels=labels)\n",
     "    plt.title(title, fontsize=12)\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
