add enhanced harmonics function

--- a/src/A2e_fxh157.ipynb
+++ b/src/A2e_fxh157.ipynb
@@ -84,6 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.io import wavfile\n",
     "import scipy\n",
