implement pulse train

--- a/src/tempo_detection.ipynb
+++ b/src/tempo_detection.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -285,6 +285,24 @@
    "source": [
     "indices, values = bpd.pick_peaks(EAC)\n",
     "bpd.plot_correlation(A=EAC, indices=indices, values=values, title=\"Top 10 Peaks\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66 bpm\n"
+     ]
+    }
+   ],
+   "source": [
+    "lag = bpd.evaluate_pulse_train(indices, frames[0])\n",
+    "print(f\"{int(round(344.5*60/lag, 0))} bpm\")"
    ]
   }
  ],
